--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -1,9 +1,5 @@
-<h3>Raised Buttons</h3>
-<div class="example-button-row">
-  <button mat-raised-button>Basic</button>
-  <button mat-raised-button color="primary">Primary</button>
-  <button mat-raised-button color="accent">Accent</button>
-  <button mat-raised-button color="warn">Warn</button>
-  <button mat-raised-button disabled>Disabled</button>
-  <a mat-raised-button routerLink=".">Link</a>
-</div>
+
+<app-table 
+    [displayedColumns]="columnName" 
+    [dataSource]="dataSource">
+</app-table>
