--- a/src/app/global/components/app-table/app-table.component.scss
+++ b/src/app/global/components/app-table/app-table.component.scss
@@ -1,4 +1,3 @@
-/* Structure */
 table {
   width: 100%;
 }
@@ -6,4 +5,12 @@ table {
 .mat-form-field {
   font-size: 14px;
   width: 100%;
+}
+
+td, th {
+  width: 25%;
+}
+
+th.mat-sort-header-sorted {
+  color: black;
 }
