feat: add button icons in table

--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -3,3 +3,8 @@
     [displayedColumns]="columnName" 
     [dataSource]="dataSource">
 </app-table>
+
+<button mat-raised-button color="primary">
+    <i class="material-icons">add</i>
+    Add new employee
+</button>
