--- a/src/app/global/components/app-table/app-table.component.html
+++ b/src/app/global/components/app-table/app-table.component.html
@@ -1,7 +1,7 @@
   <div>
     <span>Employees</span>
     <mat-form-field>
-      <i class="material-icons">search</i>
+      <mat-icon>search</mat-icon>
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="search by anything">
     </mat-form-field>
   </div>
@@ -32,6 +32,18 @@
       <td mat-cell *matCellDef="let element"> {{element.hiredate}} </td>
     </ng-container>
   
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions" stickyEnd>
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element; let i = index">
+        <button mat-button (click)="actionClick(i)"><mat-icon>edit</mat-icon></button>
+        <button mat-button (click)="actionClick(i)"><mat-icon>remove_red_eye</mat-icon></button>
+        <button mat-button (click)="actionClick(i)"><mat-icon>delete</mat-icon></button>
+      </td>
+    </ng-container>
+     
+    
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     
