hotfix: Sort funcionality using ngrx

--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -4,7 +4,7 @@
     [dataSource]="employees$">
 </app-table>
 
-<button mat-raised-button color="primary">
+<button mat-raised-button color="primary" [routerLink]="['/newuser']">
     <i class="material-icons">add</i>
     Add new employee
 </button>
