--- a/src/app/global/components/app-table/app-table.component.html
+++ b/src/app/global/components/app-table/app-table.component.html
@@ -6,7 +6,7 @@
     </mat-form-field>
   </div>
 
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+  <table mat-table [dataSource]="employee" matSort class="mat-elevation-z8">
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
@@ -35,15 +35,13 @@
     <!-- Actions Column -->
     <ng-container matColumnDef="actions" stickyEnd>
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element; let i = index">
-        <button mat-button (click)="actionClick(i)"><mat-icon>edit</mat-icon></button>
-        <button mat-button (click)="actionClick(i)"><mat-icon>remove_red_eye</mat-icon></button>
-        <button mat-button (click)="actionClick(i)"><mat-icon>delete</mat-icon></button>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button (click)="actionClick(element)"><mat-icon>edit</mat-icon></button>
+        <button mat-button (click)="actionClick(element)"><mat-icon>remove_red_eye</mat-icon></button>
+        <button mat-button (click)="actionClick(element)"><mat-icon>delete</mat-icon></button>
       </td>
     </ng-container>
      
-    
-
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     
