feat: conect views with ngrx

--- a/src/app/employees/employee-info/employee-info.component.html
+++ b/src/app/employees/employee-info/employee-info.component.html
@@ -1,2 +1,5 @@
 <h4 class="title">{{title}}</h4>
-<app-employee-form [countries]="countries$"></app-employee-form>
+<app-employee-form 
+    [countries]="countries$"
+    [disableForm]="disableForm">
+</app-employee-form>
