--- a/src/app/global/components/app-table/app-table.component.html
+++ b/src/app/global/components/app-table/app-table.component.html
@@ -1,50 +1,50 @@
-  <div>
-    <span>Employees</span>
-    <mat-form-field>
+<div class="component">
+    <h3>Employees</h3>
+    <mat-form-field class="component__search">
       <mat-icon>search</mat-icon>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="search by anything">
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search by anything">
     </mat-form-field>
-  </div>
 
-  <table mat-table [dataSource]="employee" matSort class="mat-elevation-z8">
+    <table mat-table [dataSource]="employee" matSort class="mat-elevation-z8">
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name <br>(job title) </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-  
-    <!-- Age Column -->
-    <ng-container matColumnDef="age">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
-      <td mat-cell *matCellDef="let element"> {{element.age}} </td>
-    </ng-container>
-  
-    <!-- Username Column -->
-    <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
-      <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-    </ng-container>
-
-    <!-- Position Column -->
-    <ng-container matColumnDef="hiredate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Hire Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.hiredate}} </td>
-    </ng-container>
-  
-    <!-- Actions Column -->
-    <ng-container matColumnDef="actions" stickyEnd>
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-button (click)="actionClick(element)"><mat-icon>edit</mat-icon></button>
-        <button mat-button (click)="actionClick(element)"><mat-icon>remove_red_eye</mat-icon></button>
-        <button mat-button (click)="actionClick(element)"><mat-icon>delete</mat-icon></button>
-      </td>
-    </ng-container>
-     
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name <br>(job title) </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
     
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+      <!-- Age Column -->
+      <ng-container matColumnDef="age">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
+        <td mat-cell *matCellDef="let element"> {{element.age}} </td>
+      </ng-container>
     
-  </table>
+      <!-- Username Column -->
+      <ng-container matColumnDef="username">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
+        <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+      </ng-container>
+  
+      <!-- Hire Date Column -->
+      <ng-container matColumnDef="hiredate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Hire Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.hiredate | date:'shortDate'}} </td>
+      </ng-container>
+    
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions" stickyEnd>
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-button (click)="actionClick(element, 'edit')"><mat-icon>edit</mat-icon></button>
+          <button mat-button (click)="actionClick(element, 'detail')"><mat-icon>remove_red_eye</mat-icon></button>
+          <button mat-button (click)="actionClick(element, 'delete')"><mat-icon>delete</mat-icon></button>
+        </td>
+      </ng-container>
+        
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+    </table>
+
+</div>
+  
