hotfix: delete formControl in child component

--- a/src/app/global/components/app-dropdown/app-dropdown.component.html
+++ b/src/app/global/components/app-dropdown/app-dropdown.component.html
@@ -1,8 +1,7 @@
-<mat-form-field class="example-middle-width">
+<mat-form-field>
   <mat-select
-      [disabled]="isDisabled"
+      [attr.disabled]="isDisabled"
       [(value)]="selected"
-      formControlName="jobtitle"
       (selectionChange)="onChangeJob($event.value)">
     <mat-option *ngFor="let pos of positions" [value]="pos.value" >
       {{pos.viewValue}}
